unpackaged/objects/Flusso_Fatture__c.object
<CustomObject>
    <fields>
        <fullName>Data_Pubblicazione__c</fullName>
        <label>Data Pubblicazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Flusso__c</fullName>
        <externalId>true</externalId>
        <label>ID_Flusso</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Fatture__c</fullName>
        <label>Numero Fatture</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flusso Fatture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Flusso Fatture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flusso Fatture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>